# governance-agent

./: LICENSE  README.md  SYSTEM_PROMPT.md  governance  governance-agent.md  install.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
configs/: claude-code.md  codex.toml  continue.md  copilot.md  cursor.md  opencode.jsonc
src/: validate_agent.py
tests/: test_validate_agent.py
