[project]
name = "governance-agent"
version = "1.0.0"
description = "OpenCode agent for software governance audits"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
